header overlap fix, text resize

--- a/_sass/website/header.scss
+++ b/_sass/website/header.scss
@@ -95,6 +95,10 @@ article#main {
   display: inline-block;
 }
 
+.setVisible {
+  opacity: 1;
+}
+
 .header-logo {
   display: block;
   position: relative;
