--- a/_sass/website/landing.scss
+++ b/_sass/website/landing.scss
@@ -109,7 +109,7 @@ $landing-title-color: #4A4A4A;
   }
 
   h2 {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     font-weight: 600;
     font-style: normal;
     font-stretch: normal;
